# forgedns

./: .dockerignore  .gitignore  AGENTS.md  AGENTS_CN.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README_CN.md  README_EN.md  build.rs  config.yaml  justfile  rustfmt.toml
.claude/: launch.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docker.yml  docs-ci.yml  release.yml  rust-ci.yml  webui-ci.yml
.qoder/: settings.local.json
.zed/: settings.json
benches/: domain_rule_matcher.rs  ip_rule_matcher.rs  message_codec.rs  plugin_local_answers.rs
benchmarks/mosdns_compare/: 01-baseline-udp-forward.yaml  02-cache-hotpath.yaml  03-dual-entry-udp-tcp.yaml  04-concurrent-upstreams.yaml  05-fallback-standby.yaml  06-local-answers.yaml  07-doh-upstream-h2.yaml  08-domain-set.yaml  09-ip-set.yaml  10-sequence-base.yaml  11-match-true.yaml  12-match-false.yaml  13-match-qname.yaml  14-match-qtype.yaml  15-match-qclass.yaml  16-match-client-ip.yaml  17-match-mark.yaml  18-match-env.yaml  19-match-random.yaml  20-match-rate-limiter.yaml  21-match-string-exp.yaml  22-match-has-resp.yaml  23-match-has-wanted-ans.yaml  24-match-resp-ip.yaml  25-match-cname.yaml  26-match-ptr-ip.yaml  27-exec-black-hole.yaml  28-exec-ttl.yaml  29-exec-drop-resp.yaml  30-exec-debug-print.yaml  31-exec-query-summary.yaml  32-exec-metrics-collector.yaml  33-exec-sleep.yaml  34-exec-ecs.yaml  35-exec-forward-edns0opt.yaml  36-exec-prefer-ipv4.yaml  37-exec-prefer-ipv6.yaml  38-exec-redirect.yaml  39-exec-reverse-lookup.yaml  40-match-rcode.yaml  (+11 more)
benchmarks/mosdns_compare/data/: ip_set_rules.txt
benchmarks/mosdns_compare/queries/: cache-hotpath.txt  cache-mixed.txt  domain-set-mixed.txt  domain-set.txt  forward.txt  ip-set-positive.txt  ip-set.txt  local-answers.txt  local-rewrite.txt  nxdomain.txt  plugin-a.txt  plugin-aaaa.txt  plugin-cname.txt  plugin-ptr.txt  provider-chain.txt
crates/forgedns-proto/: Cargo.toml  README.md
crates/forgedns-proto/src/: buffer_pool.rs  error.rs  header.rs  lib.rs  message.rs  name.rs  question.rs  record.rs  types.rs
crates/forgedns-proto/src/rdata/: basic.rs  dnssec.rs  legacy.rs  mod.rs
crates/forgedns-proto/src/wire/: codec.rs  length.rs  mod.rs
crates/forgedns-proto/src/wire/rdata/: basic.rs  dnssec.rs  mod.rs  service.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: lib.rs
crates/oxidns-proto/: Cargo.toml  README.md
crates/oxidns-proto/src/: message.rs  types.rs
crates/proto/: Cargo.toml  README.md
crates/proto/src/: lib.rs  question.rs  record.rs
crates/ripset/: Cargo.toml  README.md
crates/ripset/src/: ipset.rs  lib.rs  netlink.rs  nftset.rs  stub.rs
crates/zoneparser/: Cargo.toml  README.md
crates/zoneparser/src/: lib.rs  parser.rs
crates/zoneparser/test_data/: relative.zn  simple.zn
docker/: Dockerfile
docs/: 01-configuration.md  03-api.md  04-mikrotik-policy-routing.md  05-scenarios.md  06-architecture-and-design.md  07-benchmarks.md  README.md  SUMMARY.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/02-plugin-reference/: README.md  executor.md  matcher.md  provider.md  server.md
docs/docs/: api.md  architecture-and-design.md  benchmarks.md  cli.md  configuration.md  intro.md  mikrotik-policy-routing.md  quickstart.md  releases.md  scenarios.md  webui.md
docs/docs/plugin-reference/: executor.md  matcher.md  overview.md  provider.md  server.md
docs/src/components/: ReleaseCard.tsx
docs/src/css/: custom.css
docs/static/js/: theme-favicon.js
packaging/: forgedns.service  oxidns.service
packaging/debian/: postinst  prerm
packaging/docker/: Dockerfile.runtime
resource/: config.yaml
src/: app.rs  lib.rs  main.rs  service.rs  upgrade.rs
src/api/: auth.rs  control.rs  cors.rs  global.rs  handler.rs  health.rs  hub.rs  logs.rs  metrics.rs  mod.rs  request.rs  response.rs  route.rs  server.rs  static_files.rs  tests.rs
src/app/: banner.rs  bootstrap.rs  cli.rs  export_dat.rs  graph.rs  logging.rs
src/config/: config.rs  diagnostic.rs  mod.rs  types.rs
src/core/: app_clock.rs  buffer_pool.rs  context.rs  dns_utils.rs  error.rs  handler.rs  log.rs  metrics.rs  mod.rs  rule_matcher.rs  runtime.rs  system_utils.rs  task_center.rs  ttl_cache.rs
src/core/rule_matcher/: domain.rs  ip.rs  mod.rs
src/message/: header.rs  message.rs  mod.rs  name.rs  question.rs  read.rs  record.rs  types.rs
src/message/codec/: decode.rs  encode.rs  mod.rs
src/message/model/: enums.rs  message.rs  mod.rs  question.rs
src/message/rdata/: basic.rs  dnssec.rs  legacy.rs  mod.rs  service.rs
src/message/response/: build.rs  mod.rs  plan.rs  rewrite.rs  scan.rs  tests.rs  value.rs
src/message/wire/: codec.rs  compression.rs  constants.rs  edns.rs  flags.rs  header.rs  length.rs  meta.rs  mod.rs  name.rs  packet.rs  parser.rs  question.rs  record.rs  truncate.rs
src/network/: buffer_pool.rs  http_client.rs  listen.rs  mod.rs  netlink_nf.rs  tls_config.rs
src/network/server/: http_dispatcher.rs  mod.rs
src/network/transport/: mod.rs  quic_transport.rs  tcp_transport.rs  udp_transport.rs
src/network/upstream/: bootstrap.rs  mod.rs  utils.rs
src/pkg/: mod.rs  upstream.rs
src/pkg/upstream/: bootstrap.rs  mod.rs  pool.rs  request_map.rs  self_impl_upstream.rs  tcp.rs  tls_client_config.rs  udp.rs  upstream.rs
src/plugin/: dependency.rs  mod.rs  registry.rs  test_utils.rs
src/plugin/executable/: forward.rs  mod.rs
src/plugin/executor/: arbitrary.rs  black_hole.rs  cache.rs  cron.rs  debug_print.rs  forward.rs  (+26 more)
src/proto/: header.rs  message.rs  mod.rs  name.rs  question.rs  types.rs
tests/: message_hickory_compat.rs  plugin_integration.rs
webui/: .gitignore  AGENTS.md  CLAUDE.md  package.json  pnpm-lock.yaml
webui/app/: globals.css  layout.tsx
webui/components/: theme-provider.tsx
webui/lib/: auth-store.ts  config-history.ts  metrics.ts  mock-data.ts  oxidns-api.ts  oxidns-config.ts  oxidns-yaml-monaco.ts  plugin-config-yaml.ts  plugin-definitions.ts  store.ts  types.ts
(+223 files in other folders)
