[package]
name = "rustdns"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
futures = "0.3.31"
socket2 = "0.6.0"
hickory-proto = {version = "0.25.2",features = ["std"]}
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.4"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
clap = { version = "4.5", features = ["derive"] }
tracing-appender = "0.2.3"
lazy_static = "1.5"
dashmap = "6"
url = "2.5.7"
rustls = { version = "0.23.32", features = ["ring"] }
webpki-roots = "1.0.2"
arc-swap = "1.7.1"
bytes = "1.10.1"
rand = "0.9.2"
crossbeam-queue = "0.3.12"
h2 = "0.4.12"
h3 = "0.0.8"
quinn = "0.11.9"
h3-quinn = "0.0.10"
http = "1.3.1"
base64 = "0.22.1"
thiserror = "2.0"
fast-socks5 = "0.10.0"


hotpath = { version = "0.5.2", optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-off = ["hotpath/hotpath-off"]
