[package]
name = "forgedns"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
futures = "0.3.31"
socket2 = "0.6.0"
hickory-proto = { version = "0.25.2" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
bincode = "2.0.1"
clap = { version = "4.5", features = ["derive"] }
tracing-appender = "0.2"
lazy_static = "1.5"
dashmap = "6"
url = "2.5"
rustls = { version = "0.23.32", features = ["ring"] }
webpki-roots = "1.0.2"
arc-swap = "1.7.1"
bytes = "1.11"
rand = "0.10"
crossbeam-queue = "0.3.12"
h2 = "0.4"
h3 = "0.0.8"
quinn = "0.11.9"
h3-quinn = "0.0.10"
http = "1.4"
base64 = "0.22"
thiserror = "2.0"
fast-socks5 = "1.0.0"
inventory = "0.3"
hotpath =  "0.11.0"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]