[package]
name = "forgedns"
version = "0.1.0"
edition = "2024"
authors = ["Sven Shi <isvenshi@gmail.com>"]
description = "A Rust-powered DNS engine inspired by MosDNS, designed for performance and complete configurability."
repository = "https://github.com/SvenShi/forgedns"
license = "GPL-3.0-or-later"
readme = "README_EN.md"
keywords = ["dns", "rustdns", "pipeline", "flow", "dns-server"]
categories = ["network-programming"]


[dependencies]
futures = "0.3.31"
socket2 = "0.6.0"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
wincode = { version = "0.4", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
tracing-appender = "0.2"
lazy_static = "1.5"
dashmap = "6"
url = "2.5"
rustls = { version = "0.23.32", features = ["ring"] }
webpki-roots = "1.0.2"
arc-swap = "1.7.1"
bytes = "1.11"
rand = "0.10"
crossbeam-queue = "0.3.12"
h2 = "0.4"
h3 = "0.0.8"
quinn = "0.11.9"
h3-quinn = "0.0.10"
hyper = { version = "1.8.1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["server", "http1", "http2", "tokio"] }
http-body-util = "0.1.3"
http = "1.4"
base64 = "0.22"
thiserror = "2.0"
fast-socks5 = "1.0.0"
inventory = "0.3"
regex = "1.12.2"
aho-corasick = "1.1.4"
ahash = "0.8.12"
smallvec = "1.15.1"
mikrotik-rs = "0.6.1"
service-manager = "0.11.0"

hotpath = "0.14.0"

[target.'cfg(target_os = "linux")'.dependencies]
neli = "0.7.4"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

[dev-dependencies]
hickory-proto = "0.25.2"
criterion = "0.8.2"
tempfile = "3.23.0"
hyper-util = { version = "0.1.20", features = ["server", "client", "client-legacy", "http1", "http2", "tokio"] }

[[bench]]
name = "message_codec"
harness = false

[[bench]]
name = "plugin_local_answers"
harness = false


[[bin]]
name = "forgedns"
path = "src/main.rs"

[lib]
name = "forgedns"
path = "src/lib.rs"


[package.metadata.deb]
maintainer = "Sven Shi <isvenshi@gmail.com>"
copyright = "2026, Sven Shi"
depends = "$auto"
section = "net"
priority = "optional"
license-file = ["LICENSE", "0"]
extended-description = """\
A Rust-powered DNS engine inspired by MosDNS, designed for performance and complete configurability.
"""
assets = [
    ["target/release/forgedns", "usr/bin/forgedns", "755"],
    ["config.yaml", "etc/forgedns/config.yaml", "644"],
]
maintainer-scripts = "packaging/debian"

[package.metadata.deb.systemd-units]
enable = true
unit-scripts = "packaging"