[package]
name = "forgedns-proto"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "forgedns_proto"
path = "src/lib.rs"
doctest = false

[dependencies]
ahash = "0.8.12"
hotpath = "0.14"
smallvec = "1.15.1"
thiserror = "2.0"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]