[package]
name = "forgedns-proto"
version = "0.1.0"
edition = "2024"
authors = ["Sven Shi <isvenshi@gmail.com>"]
description = "DNS message model and wire codec primitives used by ForgeDNS"
license = "GPL-3.0-or-later"
repository = "https://github.com/SvenShi/forgedns"
readme = "README.md"
keywords = ["dns", "protocol", "codec", "wire"]
categories = ["network-programming", "parser-implementations"]

[lib]
name = "forgedns_proto"
path = "src/lib.rs"
doctest = false

[dependencies]
ahash = "0.8.12"
hotpath = "0.15"
smallvec = "1.15.1"
thiserror = "2.0"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
