[package]
name = "oxidns-macros"
version = "0.1.0"
edition = "2024"
authors = ["Sven Shi <isvenshi@gmail.com>"]
description = "Proc macros for OxiDNS."
repository = "https://github.com/svenshi/oxidns"
license = "GPL-3.0-or-later"
readme = "README.md"

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
