[package]
name = "ripset"
version = "0.1.0"
edition = "2024"
authors = ["Chen Xu <windoze@0d0a.com>"]
homepage = "https://github.com/windoze/ripset"
description = "Pure Rust implementation of ipset/nftset operations via netlink"
license = "MIT OR Apache-2.0"
repository = "https://github.com/windoze/ripset"
readme = "README.md"
keywords = ["linux", "ipset", "netlink", "nftables", "networking"]
categories = ["network-programming"]

[dependencies]
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
